--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -377,7 +377,7 @@ $o-we-toolbar-color-clickable-active: $o-we-bg-darkest;
                 background: $o-brand-primary;
 
                 &, &:hover {
-                    color: color-yiq($o-brand-primary);
+                    color: color-contrast($o-brand-primary);
                 }
 
                 &:hover {
