--- a/addons/website/static/src/snippets/s_popup/001.scss
+++ b/addons/website/static/src/snippets/s_popup/001.scss
@@ -22,7 +22,7 @@
         width: $font-size-lg * 2;
         height: $font-size-lg * 2;
         line-height: $font-size-lg * 2;
-        @include o-bg-color(color-yiq(o-color('primary')), o-color('primary'), $with-extras: false);
+        @include o-bg-color(color-contrast(o-color('primary')), o-color('primary'), $with-extras: false);
         box-shadow: $box-shadow-sm;
         cursor: pointer;
         font-size: $font-size-lg;
