--- a/addons/website_forum/static/src/scss/website_forum.scss
+++ b/addons/website_forum/static/src/scss/website_forum.scss
@@ -39,7 +39,7 @@ $bronze: #eea91e;
         word-wrap: break-word;
 
         pre {
-            color: color-yiq(gray('100'));
+            color: color-contrast(gray('100'));
             border-radius: $border-radius;
             padding: 1rem;
             background-color: gray('100');
