--- a/addons/website_payment/static/src/snippets/s_donation/000.scss
+++ b/addons/website_payment/static/src/snippets/s_donation/000.scss
@@ -34,7 +34,7 @@
             left: 0%;
             margin-top: 28px;
             padding: 0.5rem 1rem;
-            color: color-yiq(o-color('primary'));
+            color: color-contrast(o-color('primary'));
             background: theme-color('primary');
             font-size: 1.15rem;
             border-radius: 0.3rem;
