--- a/addons/website_profile/static/src/scss/website_profile.scss
+++ b/addons/website_profile/static/src/scss/website_profile.scss
@@ -66,7 +66,7 @@ $owprofile-color-bg: mix($body-bg, #efeff4);
             }
 
             &.active {
-                color: color-yiq($owprofile-color-bg);
+                color: color-contrast($owprofile-color-bg);
                 background: $owprofile-color-bg;
                 border-color: $owprofile-color-bg;
             }
