--- a/addons/hr_skills/static/src/css/hr_skills.scss
+++ b/addons/hr_skills/static/src/css/hr_skills.scss
@@ -144,7 +144,7 @@
         }
 
         &.o_group_skills .o_group_name > b, .o_horizontal_separator {
-            color: color-yiq(gray('200'));
+            color: color-contrast(gray('200'));
             font-style: italic;
         }
     }
