--- a/addons/web/static/src/legacy/scss/bootstrap_overridden_frontend.scss
+++ b/addons/web/static/src/legacy/scss/bootstrap_overridden_frontend.scss
@@ -1,3 +1,7 @@
+// The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
+// See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
+$min-contrast-ratio: 3 !default;
+
 // Fonts
 //
 // Font, line-height, and color for body text, headings, and more.
