--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -2,13 +2,16 @@
 // Color system
 //
 
-// Use auto threshold for yiq colors
-// Note: also need to be defined here so that color-yiq below works
-$yiq-contrasted-threshold: false !default;
+$white: #FFF !default;
+$black: #000 !default;
 
-// Customize the light and dark text colors for use in our YIQ color contrast function.
-$yiq-text-dark: o-color('900') !default;
-$yiq-text-light: o-color('white') !default;
+// The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
+// See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
+$min-contrast-ratio: 3 !default;
+
+// Customize the light and dark text colors for use in our color contrast function.
+$color-contrast-dark: o-color('900') !default;
+$color-contrast-light: o-color('white') !default;
 
 // Spacing
 //
@@ -23,7 +26,7 @@ $spacer: 1rem !default; // Need to predefine as used below
 // Settings for the `<body>` element.
 
 $body-bg: if(o-website-value('layout') != 'full', o-color('body'), o-color('o-cc1-bg')) !default;
-$body-color: o-color('o-cc1-text') or color-yiq(o-color('o-cc1-bg')) !default;
+$body-color: o-color('o-cc1-text') or color-contrast(o-color('o-cc1-bg')) !default;
 
 // Links
 //
@@ -43,7 +46,7 @@ $link-hover-decoration: if(o-website-value('link-underline') != 'never', underli
 // Note: for the 'active' color, color preset edition is not really flexible but
 // this could come in a future update.
 $component-active-bg: o-color('o-cc1-btn-primary') !default;
-$component-active-color: if($component-active-bg, color-yiq($component-active-bg), null) !default;
+$component-active-color: if($component-active-bg, color-contrast($component-active-bg), null) !default;
 
 // Fonts
 //
