[IMP] portal: improve the security page
Bug
===
Add a link to the documentation about 2FA
and make the buttons color consistent.

Task-2629544

Part-of: odoo/odoo#78298

--- a/addons/portal/views/portal_templates.xml
+++ b/addons/portal/views/portal_templates.xml
@@ -518,7 +518,7 @@
                             <t t-esc="get_error(errors, 'password.new2')"/>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-danger">Change Password</button>
+                    <button type="submit" class="btn btn-secondary">Change Password</button>
                 </form>
             </section>
             <section t-if="debug and allow_api_keys">
@@ -553,7 +553,7 @@
                     </table>
                 </div>
                 <div>
-                    <button type="submit" class="btn btn-primary o_portal_new_api_key">New API Key</button>
+                    <button type="submit" class="btn btn-secondary o_portal_new_api_key">New API Key</button>
                 </div>
             </section>
         </div></t>
