[REF] hr: Split hr_icon_display into two separate fields.
The icon that is displayed in the employee kanban view is determined by the
field hr_icon_display, computed in the method _compute_hr_icon_display. This
method is overridden in multiple modules such as hr_holidays, hr_attendance
and hr_homeworking.

Currently this field has a state to show no icon (presence_undetermined). In
this change this state is extracted into the a separate field
show_hr_icon_display with the default state of hr_icon_display being
presence_to_define. In this way a module such as hr_attendance, which only
overrides _compute_hr_icon_display to show the default icon for everyone as a
default, now only needs to change this separate field and does not need any
knowledge of what other states exist. This reduces coupling between modules.

--- a/addons/hr_holidays/views/hr_views.xml
+++ b/addons/hr_holidays/views/hr_views.xml
@@ -86,7 +86,8 @@
             <xpath expr="//templates" position="before">
                 <field name="is_absent"/>
             </xpath>
-            <xpath expr="//strong[hasclass('o_kanban_record_title')]" position="inside">
+            <xpath expr="//strong[hasclass('o_kanban_record_title')]" position="inside"
+                   t-if="record.show_hr_icon_display.raw_value">
                  <!-- Employee is absent, in holiday but he is connected -->
                 <div class="float-end"
                      t-if="record.hr_icon_display.raw_value == 'presence_holiday_present'">
@@ -116,7 +117,8 @@
                 <field name="leave_date_to"/>
                 <field name="is_absent"/>
             </xpath>
-            <xpath expr="//div[@name='presence_absent_active']" position="after">
+            <xpath expr="//div[@name='presence_absent_active']" position="after"
+                   t-if="record.show_hr_icon_display.raw_value">
                 <!-- Employee is absent, in holiday but he is connected -->
                 <!-- green plane -->
                 <div class="float-end"
