--- a/addons/hr/views/hr_employee_views.xml
+++ b/addons/hr/views/hr_employee_views.xml
@@ -263,6 +263,7 @@
                    <field name="user_id"/>
                    <field name="user_partner_id"/>
                    <field name="hr_icon_display"/>
+                   <field name="show_hr_icon_display"/>
                    <field name="image_128" />
                    <templates>
                        <t t-name="kanban-box">
@@ -274,42 +275,44 @@
                                <div class="o_kanban_record_top">
                                    <div class="o_kanban_record_headings">
                                        <strong class="o_kanban_record_title">
-                                            <div class="float-end"
-                                                 t-if="record.hr_icon_display.raw_value == 'presence_present'"
-                                                 name="presence_present">
-                                                <!-- Employee is present/connected and it is normal according to his work schedule  -->
-                                                <span class="fa fa-circle text-success" role="img" aria-label="Present"
-                                                      title="Present" name="presence_present">
-                                                </span>
-                                            </div>
-                                            <div class="float-end"
-                                                 t-if="record.hr_icon_display.raw_value == 'presence_absent'"
-                                                 name="presence_absent">
-                                                <!-- Employee is not present and it is normal according to his work schedule -->
-                                                <span class="fa fa-circle-o text-muted" role="img" aria-label="Absent"
-                                                      title="Absent" name="presence_absent">
-                                                </span>
-                                            </div>
-                                            <div class="float-end"
-                                                 t-if="record.hr_icon_display.raw_value == 'presence_absent_active'"
-                                                    name="presence_absent_active">
-                                                <!-- Employee is connected but according to his work schedule,
-                                                     he should not work for now  -->
-                                                <span class="fa fa-circle-o text-success" role="img"
-                                                      aria-label="Present but not active"
-                                                      title="Present but not active"
-                                                      name="presence_absent_active">
-                                                </span>
-                                            </div>
-                                            <div class="float-end"
-                                                 t-if="record.hr_icon_display.raw_value == 'presence_to_define'"
-                                                    name="presence_to_define">
-                                                <!-- Employee is not here but according to his work schedule, he should be connected -->
-                                                <span class="fa fa-circle text-warning" role="img"
-                                                      aria-label="To define" title="To define"
-                                                      name="presence_to_define">
-                                                </span>
-                                            </div>
+                                           <t t-if="record.show_hr_icon_display.raw_value">
+                                                <div class="float-end"
+                                                     t-if="record.hr_icon_display.raw_value == 'presence_present'"
+                                                     name="presence_present">
+                                                    <!-- Employee is present/connected and it is normal according to his work schedule  -->
+                                                    <span class="fa fa-circle text-success" role="img" aria-label="Present"
+                                                          title="Present" name="presence_present">
+                                                    </span>
+                                                </div>
+                                                <div class="float-end"
+                                                     t-if="record.hr_icon_display.raw_value == 'presence_absent'"
+                                                     name="presence_absent">
+                                                    <!-- Employee is not present and it is normal according to his work schedule -->
+                                                    <span class="fa fa-circle-o text-muted" role="img" aria-label="Absent"
+                                                          title="Absent" name="presence_absent">
+                                                    </span>
+                                                </div>
+                                                <div class="float-end"
+                                                     t-if="record.hr_icon_display.raw_value == 'presence_absent_active'"
+                                                        name="presence_absent_active">
+                                                    <!-- Employee is connected but according to his work schedule,
+                                                         he should not work for now  -->
+                                                    <span class="fa fa-circle-o text-success" role="img"
+                                                          aria-label="Present but not active"
+                                                          title="Present but not active"
+                                                          name="presence_absent_active">
+                                                    </span>
+                                                </div>
+                                                <div class="float-end"
+                                                     t-if="record.hr_icon_display.raw_value == 'presence_to_define'"
+                                                        name="presence_to_define">
+                                                    <!-- Employee is not here but according to his work schedule, he should be connected -->
+                                                    <span class="fa fa-circle text-warning" role="img"
+                                                          aria-label="To define" title="To define"
+                                                          name="presence_to_define">
+                                                    </span>
+                                                </div>
+                                            </t>
                                             <field name="name" placeholder="Employee's Name"/>
                                        </strong>
                                        <span t-if="record.job_title.raw_value" class="o_kanban_record_subtitle"><field name="job_title"/></span>
