[REF] *: BS5: Migrate data attributes
> Data attributes for all JavaScript plugins are now namespaced to help
> distinguish Bootstrap functionality from third parties and your own code.
> For example, we use data-bs-toggle instead of data-toggle.

https://getbootstrap.com/docs/5.1/migration/#javascript

Task ID: 2766483

Part-of: odoo/odoo#95450

--- a/addons/website_event_exhibitor/views/event_templates_sponsor.xml
+++ b/addons/website_event_exhibitor/views/event_templates_sponsor.xml
@@ -17,8 +17,8 @@
                         </t>
                         <a class="o_wevent_sponsor o_wevent_sponsor_card h-100" tabindex="0" role="button"
                             t-att-data-publish="'on' if sponsor.website_published else 'off'"
-                            t-att-data-content="popover_content"
-                            data-html="true" data-trigger="focus" data-toggle="popover" data-placement="bottom">
+                            t-att-data-bs-content="popover_content"
+                            data-bs-html="true" data-bs-trigger="focus" data-bs-toggle="popover" data-bs-placement="bottom">
                             <t t-call="website_event_exhibitor.event_sponsor_thumb_details"/>
                         </a>
                     </t>
