--- a/addons/hr_holidays/views/hr_views.xml
+++ b/addons/hr_holidays/views/hr_views.xml
@@ -46,7 +46,9 @@
                 </xpath>
 
                 <xpath expr="//div[hasclass('o_kanban_card_lower_content')]" position="inside">
-                    <div class="row o_kanban_primary_bottom bottom_block">
+                    <div class="row o_kanban_primary_bottom bottom_block"
+                         style="background-color: white"
+                         t-if="record.absence_of_today.raw_value > 0">
                         <div class="col-3">
                             <a name="%(hr_employee_action_from_department)d" type="action" title="Absent Employee(s), Whose time off requests are either confirmed or validated on today">Absence</a>
                         </div>
