--- a/addons/web/static/src/legacy/scss/bootstrap_overridden_frontend.scss
+++ b/addons/web/static/src/legacy/scss/bootstrap_overridden_frontend.scss
@@ -13,6 +13,9 @@ $font-size-base: (14 / 16) * 1rem !default;
 // when used with background classes, it should not be forced to a gray color.
 $blockquote-small-color: inherit !default;
 
+// Link
+$link-decoration: none !default;
+
 // Figures
 
 // Inherit color for figure-caption, use text-muted on top of it if you want
