--- a/addons/web/static/src/webclient/webclient.scss
+++ b/addons/web/static/src/webclient/webclient.scss
@@ -8,6 +8,13 @@ html, body {
     height: 100%;
 }
 
+// Disable default border-style added by _reboot.scss
+tfoot {
+  tr, td, th {
+    border-style: none;
+  }
+}
+
 // ------------------------------------------------------------------
 //  General
 // ------------------------------------------------------------------
