--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -2,12 +2,28 @@
 // Color system
 //
 
+//Restore BS4 Colors
+$blue: #007bff !default;
+$pink: #e83e8c !default;
+$green: #28a745 !default;
+$cyan: #17a2b8 !default;
+$gray-900: #212529 !default;
+//End Restore BS4 Colors
+
 $white: #FFF !default;
 $black: #000 !default;
 
 // The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
 // See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
 $min-contrast-ratio: 3 !default;
+
+// Prefix for :root CSS variables
+$variable-prefix: '' !default;
+
+// Restore negative margins disabled in BS5 by default
+$enable-negative-margins: true !default;
+
+
 
 // Customize the light and dark text colors for use in our color contrast function.
 $color-contrast-dark: o-color('900') !default;
@@ -39,6 +55,16 @@ $link-hover-color: auto-contrast(darken($link-color, 15%), o-color('o-cc1-bg'), 
 $link-decoration: if(o-website-value('link-underline') == 'always', underline, none) !default;
 $link-hover-decoration: if(o-website-value('link-underline') != 'never', underline, none) !default;
 
+// Table
+$table-striped-bg-factor: .01 !default;
+$table-cell-padding-x: .75rem !default;
+$table-cell-padding-y: .75rem !default;
+$table-cell-padding-x-sm: .3rem !default;
+$table-cell-padding-y-sm: .3rem !default;
+
+// Grid
+$grid-gutter-width: 30px !default;
+
 // Components
 //
 // Define common padding and border radius sizes and more.
@@ -69,6 +95,10 @@ $headings-color: o-color('o-cc1-headings') !default;
 $lead-font-size: 1.125rem !default;
 
 $text-muted: mute-color($body-color) !default;
+
+// HR
+$hr-color: $black !default;
+$hr-opacity: 0.1 !default;
 
 // Buttons
 //
@@ -112,9 +142,18 @@ $input-border-radius: o-website-value('input-border-radius') !default;
 $input-border-radius-lg: o-website-value('input-border-radius-lg') !default;
 $input-border-radius-sm: o-website-value('input-border-radius-sm') !default;
 
+// Badge
+$badge-padding-y: 0.25em !default;
+$badge-padding-x: 0.4em !default;
+
+// Breadcrumbs
+$breadcrumb-padding-y: .75rem !default;
+$breadcrumb-padding-x: 1rem !default;
+
 // Navbar
 
 // Increase default navbar padding for some navbar styles
+$navbar-padding-x: $spacer !default;
 $navbar-padding-y: if(index(('fill', 'pills', 'outline'), o-website-value('header-links-style')), ($spacer / 2) * 1.25, null) !default;
 $navbar-nav-link-padding-x: if(index(('outline', 'block'), o-website-value('header-links-style')), .5rem * 3, null) !default;
 $navbar-nav-link-padding-x: if(o-website-value('header-links-style') == 'border-bottom', .5rem * 2, null) !default;
@@ -123,6 +162,9 @@ $navbar-nav-link-padding-x: if(o-website-value('header-links-style') == 'border-
 // Jumbotron
 
 $jumbotron-bg: transparent !default;
+
+// Block Quote
+$blockquote-margin-y: 0 !default;
 
 // Bootstrap Review
 
