--- a/addons/account/views/account_analytic_view.xml
+++ b/addons/account/views/account_analytic_view.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+        <record id="account_analytic_plan_form_view_inherit_account" model="ir.ui.view">
+            <field name="name">account.analytic.plan.inherit.form</field>
+            <field name="model">account.analytic.plan</field>
+            <field name="inherit_id" ref="analytic.account_analytic_plan_form_view"/>
+            <field name="arch" type="xml">
+                <data>
+                    <xpath expr="//field[@name='parent_id']" position="after">
+                        <field name="default_applicability" attrs="{'invisible': [('parent_id', '!=', False)]}"/>
+                    </xpath>
+                    <xpath expr="//sheet" position="inside">
+                        <notebook>
+                            <page string="Applicability" name="applicability" attrs="{'invisible': [('parent_id', '!=', False)]}">
+                                <field name="applicability_ids">
+                                    <tree editable="bottom">
+                                        <field name="domain"/>
+                                        <field name="account_prefix"/>
+                                        <field name="product_categ_id"/>
+                                        <field name="applicability"/>
+                                    </tree>
+                                </field>
+                            </page>
+                        </notebook>
+                    </xpath>
+                </data>
+            </field>
+        </record>
+
         <record id="view_account_analytic_line_form_inherit_account" model="ir.ui.view">
             <field name="name">account.analytic.line.form.inherit.account</field>
             <field name="model">account.analytic.line</field>
@@ -17,7 +44,8 @@
                     <group name="amount" position="after">
                         <group/> <!-- put Accounting group under Amount group -->
                         <group name="accounting" string="Accounting">
-                            <field name="general_account_id" options="{'no_create': True}"/>
+                            <field name="general_account_id" options="{'no_create': True}" attrs="{'readonly':[('move_id','!=', False)]}"/>
+                            <field name="journal_id" options="{'no_create': True}" attrs="{'readonly':[('move_id','!=', False)]}"/>
                             <field name="move_id" options="{'no_create': True}"/>
                         </group>
                     </group>
@@ -85,6 +113,17 @@
                         <field string="Vendor Bills" name="vendor_bill_count" widget="statinfo"/>
                     </button>
                 </div>
+            </field>
+        </record>
+
+        <record id="view_account_analytic_line_filter_inherit" model="ir.ui.view">
+            <field name="name">account.analytic.line.select.inherit</field>
+            <field name="model">account.analytic.line</field>
+            <field name="inherit_id" ref="analytic.view_account_analytic_line_filter"/>
+            <field name="arch" type="xml">
+                <xpath expr="//filter[@name='group_date']" position="after">
+                    <filter string="Category" name='category' context="{'group_by': 'category'}"/>
+                </xpath>
             </field>
         </record>
 
