--- a/addons/account/views/res_config_settings_views.xml
+++ b/addons/account/views/res_config_settings_views.xml
@@ -674,6 +674,10 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-12 col-lg-6">
+                                <label for="analytic_plan_id" class="col-lg-5 o_light_label"/>
+                                <field name="analytic_plan_id"/>
+                            </div>
                         </div>
                         <h2>Storno Accounting</h2>
                         <div class="row mt16 o_settings_container" id="storno">
