--- a/addons/analytic/views/analytic_account_views.xml
+++ b/addons/analytic/views/analytic_account_views.xml
@@ -1,125 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-        <record id="account_analytic_tag_tree_view" model="ir.ui.view">
-            <field name="name">account.analytic.tag.tree</field>
-            <field name="model">account.analytic.tag</field>
+        <record id="account_analytic_plan_form_view" model="ir.ui.view">
+            <field name="name">account.analytic.plan.form</field>
+            <field name="model">account.analytic.plan</field>
             <field name="arch" type="xml">
-                <tree string="Analytic Tags">
-                    <field name="name"/>
-                    <field name="display_name" invisible="1"/>
-                    <field name="company_id" groups="base.group_multi_company"/>
-                </tree>
-            </field>
-        </record>
-
-        <record id="account_analytic_tag_form_view" model="ir.ui.view">
-            <field name="name">account.analytic.tag.form</field>
-            <field name="model">account.analytic.tag</field>
-            <field name="arch" type="xml">
-                <form string="Analytic Tags">
+                <form string="Analytic Account Plans">
                     <sheet>
-                        <widget name="web_ribbon" title="Archived" bg_color="bg-danger" attrs="{'invisible': [('active', '=', True)]}"/>
+                        <div class="oe_button_box" name="button_box">
+                            <button name="action_view_children_plans" type="object" class="oe_stat_button" icon="fa-bars">
+                                <div class="o_field_widget o_stat_info">
+                                    <span class="o_stat_value"><field name="children_count"/></span>
+                                    <span class="o_stat_text">Subplans</span>
+                                </div>
+                            </button>
+                            <button name="action_view_analytical_accounts" type="object" class="oe_stat_button" icon="fa-bars">
+                                <div class="o_field_widget o_stat_info">
+                                    <span class="o_stat_value"><field name="account_count"/></span>
+                                    <span class="o_stat_text">Analytic Accounts</span>
+                                </div>
+                            </button>
+                        </div>
+                        <div class="oe_title">
+                            <h1>
+                                <field name="name"/>
+                            </h1>
+                        </div>
                         <group>
-                            <field name="active" invisible="1"/>
-                            <field name="name"/>
-                            <field name="active_analytic_distribution" groups="analytic.group_analytic_accounting"/>
-                            <field name="company_id" groups="base.group_multi_company"/>
-                        </group>
-                        <field name="analytic_distribution_ids" nolabel="1" widget="one2many"
-                            attrs="{'invisible': [('active_analytic_distribution', '=', False)]}" groups="analytic.group_analytic_accounting">
-                            <tree string="Analytic Distribution" editable="bottom">
-                                <field name="account_id"/>
-                                <field name="percentage"/>
-                            </tree>
-                        </field>
-                    </sheet>
-                </form>
-            </field>
-        </record>
-
-        <record id="account_analytic_tag_view_search" model="ir.ui.view">
-            <field name="name">account.analytic.tag.view.search</field>
-            <field name="model">account.analytic.tag</field>
-            <field name="arch" type="xml">
-                <search string="Search Analytic Tags">
-                    <field name="name" />
-                    <separator/>
-                    <filter string="Archived" name="inactive" domain="[('active', '=', False)]"/>
-                </search>
-            </field>
-        </record>
-
-        <record id="account_analytic_tag_action" model="ir.actions.act_window">
-            <field name="name">Analytic Tags</field>
-            <field name="res_model">account.analytic.tag</field>
-            <field name="view_mode">tree,form</field>
-            <field name="help" type="html">
-              <p class="o_view_nocontent_smiling_face">
-                Add a new tag
-              </p>
-            </field>
-        </record>
-
-        <record id="account_analytic_group_form_view" model="ir.ui.view">
-            <field name="name">account.analytic.group.form</field>
-            <field name="model">account.analytic.group</field>
-            <field name="arch" type="xml">
-                <form string="Analytic Account Groups">
-                    <sheet>
-                        <group>
-                            <field name="name"/>
-                            <field name="parent_id"/>
-                        </group>
-                        <group>
-                            <field name="description"/>
-                            <field name="company_id" groups="base.group_multi_company"/>
+                            <group>
+                                <field name="parent_id"/>
+                            </group>
+                            <group>
+                                <field name="company_id" groups="base.group_multi_company"/>
+                            </group>
                         </group>
                     </sheet>
                 </form>
             </field>
         </record>
 
-        <record id="account_analytic_group_tree_view" model="ir.ui.view">
-            <field name="name">account.analytic.group.tree</field>
-            <field name="model">account.analytic.group</field>
+        <record id="account_analytic_plan_tree_view" model="ir.ui.view">
+            <field name="name">account.analytic.plan.tree</field>
+            <field name="model">account.analytic.plan</field>
             <field name="arch" type="xml">
-                <tree string="Analytic Account Groups">
+                <tree string="Analytic Account Plans">
                     <field name="name"/>
                     <field name="company_id" groups="base.group_multi_company"/>
                 </tree>
             </field>
         </record>
 
-        <record id="account_analytic_group_action" model="ir.actions.act_window">
-            <field name="name">Analytic Account Groups</field>
-            <field name="res_model">account.analytic.group</field>
+        <record id="account_analytic_plan_action" model="ir.actions.act_window">
+            <field name="name">Analytic Account Plans</field>
+            <field name="res_model">account.analytic.plan</field>
             <field name="view_mode">tree,form</field>
+            <field name="view_ids" eval="[(5, 0, 0),
+                (0, 0, {'view_mode': 'tree'}),
+                (0, 0, {'view_mode': 'form', 'view_id': ref('account_analytic_plan_form_view')})]"/>
+            <field name="domain">[('parent_id', '=', False)]</field>
             <field name="help" type="html">
               <p class="o_view_nocontent_smiling_face">
-                  Click to add a new analytic account group.
-              </p>
-              <p>
-                  This allows you to classify your analytic accounts.
+                  Click to add a new analytic account plan.
               </p>
             </field>
         </record>
-
 
         <record id="view_account_analytic_line_tree" model="ir.ui.view">
             <field name="name">account.analytic.line.tree</field>
             <field name="model">account.analytic.line</field>
             <field name="arch" type="xml">
-                <tree string="Analytic Entries">
+                <tree string="Analytic Items" multi_edit="1">
                     <field name="date" optional="show"/>
                     <field name="name"/>
                     <field name="account_id"/>
+                    <field name="plan_id"/>
                     <field name="currency_id" invisible="1"/>
                     <field name="unit_amount" sum="Quantity" optional="hide"/>
                     <field name="product_uom_id" optional="hide"/>
                     <field name="partner_id" optional="hide"/>
                     <field name="company_id" groups="base.group_multi_company" optional="show"/>
                     <field name="amount" sum="Total" optional="show"/>
-                    <field name="tag_ids" optional="hide" widget="many2many_tags"/>
                 </tree>
             </field>
         </record>
@@ -132,12 +91,12 @@
                     <field name="name"/>
                     <field name="date"/>
                     <field name="account_id"/>
-                    <field name="tag_ids"/>
+                    <field name="plan_id"/>
                     <filter string="Date" name="date" date="date"/>
+                    <filter string="Analytic Account" name="group_by_analytic_account" context="{'group_by': 'account_id'}"/>
+                    <filter string="Analytic Plan" name="group_by_analytic_plan" context="{'group_by': 'plan_id'}"/>
                     <group string="Group By..." expand="0" name="groupby">
-                        <filter string="Analytic Account" name="account_id" context="{'group_by': 'account_id'}"/>
                         <filter string="Date" name="group_date" context="{'group_by': 'date'}"/>
-                        <filter string="Category" name='category' context="{'group_by': 'category'}"/>
                     </group>
                 </search>
             </field>
@@ -201,7 +160,7 @@
                                 <field name="code"/>
                             </group>
                             <group>
-                                <field name="group_id"/>
+                                <field name="plan_id" options="{'no_quick_create': True}"/>
                                 <field name="company_id" options="{'no_create': True}" groups="base.group_multi_company"/>
                                 <field name="currency_id" options="{'no_create': True}" groups="base.group_multi_currency"/>
                             </group>
@@ -220,10 +179,11 @@
             <field name="model">account.analytic.account</field>
             <field eval="8" name="priority"/>
             <field name="arch" type="xml">
-                <tree string="Analytic Accounts">
+                <tree string="Analytic Accounts" multi_edit="1">
                     <field name="name" string="Name"/>
                     <field name="code"/>
                     <field name="partner_id"/>
+                    <field name="plan_id"/>
                     <field name="active" invisible="1"/>
                     <field name="company_id" groups="base.group_multi_company"/>
                     <field name="debit" sum="Debit"/>
@@ -311,13 +271,12 @@
             <field name="model">account.analytic.line</field>
             <field name="priority">1</field>
             <field name="arch" type="xml">
-                <form string="Analytic Entry">
+                <form string="Analytic Item">
                 <sheet>
                     <group>
-                        <group name="analytic_entry" string="Analytic Entry">
+                        <group name="analytic_item" string="Analytic Item">
                             <field name="name"/>
                             <field name="account_id"/>
-                            <field name="tag_ids" widget="many2many_tags"/>
                             <field name="date"/>
                             <field name="company_id" groups="base.group_multi_company"/>
                         </group>
@@ -338,7 +297,7 @@
             <field name="name">account.analytic.line.graph</field>
             <field name="model">account.analytic.line</field>
             <field name="arch" type="xml">
-                <graph string="Analytic Entries" sample="1">
+                <graph string="Analytic Items" sample="1">
                     <field name="account_id"/>
                     <field name="unit_amount" type="measure"/>
                     <field name="amount" type="measure"/>
@@ -350,7 +309,7 @@
             <field name="name">account.analytic.line.pivot</field>
             <field name="model">account.analytic.line</field>
             <field name="arch" type="xml">
-                <pivot string="Analytic Entries" sample="1">
+                <pivot string="Analytic Items" sample="1">
                     <field name="account_id" type="row"/>
                     <field name="unit_amount" type="measure"/>
                     <field name="amount" type="measure"/>
