--- a/odoo/addons/base/views/ir_mail_server_views.xml
+++ b/odoo/addons/base/views/ir_mail_server_views.xml
@@ -10,14 +10,18 @@
                             name="test_smtp_connection" class="btn-primary"/>
                     </header>
                     <sheet>
-                        <group col="4">
-                            <field name="name" placeholder="e.g. My Outgoing Server"/>
-                            <field name="from_filter"/>
-                            <field name="sequence"/>
-                            <field name="active" widget="boolean_toggle"/>
+                        <group>
+                            <group>
+                                <field name="name" placeholder="e.g. My Outgoing Server"/>
+                                <field name="from_filter"/>
+                            </group>
+                            <group>
+                                <field name="sequence"/>
+                                <field name="active" widget="boolean_toggle"/>
+                            </group>
                         </group>
                         <group>
-                            <group string="Authentication">
+                            <group>
                                 <field name="smtp_authentication" widget="radio"/>
                                 <field name="smtp_user" attrs="{'invisible': [('smtp_authentication', '!=', 'login')]}" force_save="1"/>
                                 <field name="smtp_pass" attrs="{'invisible': [('smtp_authentication', '!=', 'login')]}" password="True" force_save="1"/>
