[IMP] microsoft_outlook, fetchmail_outlook *: improve usability * fetchmail, google_gmail, fetchmail_gmail
Purpose
=======
Improve the usability of the outlook modules.

Specifications
==============
Remove the checkbox "Use Outlook" and instead use the
smtp_authentication and the server_type, to be consistent with Gmail.

Hide the password field for Outlook / Gmail mail servers.

Add constraints on the outgoing mail server to force the user to use
the right configuration (e.g. the from_filter, so the sending does not
fail).

Add an option in the mail module to install Outlook.

Show a message for the outgoing mail servers to explain each
authentication methods.

Task-2811567

--- a/addons/fetchmail_gmail/views/fetchmail_server_views.xml
+++ b/addons/fetchmail_gmail/views/fetchmail_server_views.xml
@@ -9,8 +9,8 @@
             <field name="user" position="after">
                 <field name="google_gmail_uri" invisible="1"/>
                 <field name="google_gmail_refresh_token" invisible="1"/>
-                <div></div>
-                <div attrs="{'invisible': [('server_type', '!=', 'gmail')]}">
+                <div attrs="{'invisible': [('server_type', '!=', 'gmail')]}"
+                    class="d-flex flex-row align-items-center" colspan="8">
                     <span attrs="{'invisible': ['|', ('server_type', '!=', 'gmail'), ('google_gmail_refresh_token', '=', False)]}"
                         class="badge text-bg-success">
                         Gmail Token Valid
@@ -22,21 +22,17 @@
                         Connect your Gmail account
                     </button>
                     <button type="object"
-                        name="open_google_gmail_uri" class="btn-link px-0"
+                        name="open_google_gmail_uri" class="btn-link px-0 ml-2"
                         attrs="{'invisible': ['|', '|', ('google_gmail_uri', '=', False), ('server_type', '!=', 'gmail'), ('google_gmail_refresh_token', '=', False)]}">
-                        <i class="fa fa-cog"/>
-                        Edit Settings
+                        <i class="fa fa-cog" title="Edit Settings"/>
                     </button>
-                    <div class="alert alert-warning" role="alert"
+                    <button class="alert alert-warning d-block mt-2 text-left"
+                        icon="fa-arrow-right" type="action" role="alert"
+                        name="%(base.res_config_setting_act_window)d"
                         attrs="{'invisible': ['|', ('server_type', '!=', 'gmail'), ('google_gmail_uri', '!=', False)]}">
                         Setup your Gmail API credentials in the general settings to link a Gmail account.
-                    </div>
+                    </button>
                 </div>
-            </field>
-            <field name="password" position="attributes">
-                <attribute name="attrs">
-                    {'required' : [('server_type', '!=', 'local'), ('server_type', '!=', 'gmail'), ('password', '!=', False)], 'invisible' : [('server_type', '=', 'gmail')]}
-                </attribute>
             </field>
         </field>
     </record>
