--- a/addons/fetchmail/views/fetchmail_views.xml
+++ b/addons/fetchmail/views/fetchmail_views.xml
@@ -29,10 +29,20 @@
                         <field name="state" widget="statusbar"/>
                     </header>
                     <sheet>
-                     <group col="4">
-                        <field name="name"/>
-                        <field name="date"/>
-                        <field name="server_type" widget="radio"/>
+                    <widget name="web_ribbon" title="Archived" bg_color="bg-danger"
+                        attrs="{'invisible': [('active', '=', True)]}"/>
+                     <group>
+                        <group>
+                            <field name="name"/>
+                            <field name="server_type" widget="radio" attrs="{'readonly': [('state', '=', 'done')]}"/>
+                        </group>
+                        <group>
+                            <field name="date" attrs="{'invisible': [('date', '=', False)]}"/>
+                            <div class="text-muted font-italic" colspan="8" role="alert"
+                                attrs="{'invisible': [('server_type_info', '=', False)]}">
+                                <field name="server_type_info"/>
+                            </div>
+                        </group>
                      </group>
                      <notebook>
                         <page string="Server &amp; Login" name="server_login_details">
@@ -47,7 +57,8 @@
                                 </group>
                                 <group attrs="{'invisible' : [('server_type', '=', 'local')]}" string="Login Information">
                                     <field name="user" attrs="{'required' : [('server_type', '!=', 'local')]}"/>
-                                    <field name="password" password="True" attrs="{'required' : [('server_type', '!=', 'local')]}"/>
+                                    <field name="password" password="True"
+                                        attrs="{'required' : [('server_type', 'in', ('imap', 'pop'))], 'invisible' : [('server_type', 'not in', ('imap', 'pop'))]}"/>
                                 </group>
                                 <group string="Actions to Perform on Incoming Mails">
                                     <field name="object_id"/>
@@ -63,7 +74,7 @@
                                 <field name="priority"/>
                                 <field name="attach"/>
                                 <field name="original"/>
-                                <field name="active" widget="boolean_toggle"/>
+                                <field name="active" invisible="1"/>
                             </group>
                         </page>
                     </notebook>
