[REF] *: BS5:  use `text-bg-#{$color}` to keep the contrasted text color
In BS5 `bg-#{$color}` don't set the color of the text. So in some case
the color is not the right one.

Task ID: 2766483

Part-of: odoo/odoo#95450

--- a/addons/event/views/event_event_views.xml
+++ b/addons/event/views/event_event_views.xml
@@ -184,7 +184,7 @@
                     <t t-name="kanban-box">
                         <div t-attf-class="d-flex flex-column p-0 oe_kanban_card oe_kanban_global_click">
                             <div class="o_kanban_content p-0 m-0 position-relative row d-flex flex-fill">
-                                <div class="col-3 bg-primary p-2 text-center d-flex flex-column justify-content-center">
+                                <div class="col-3 text-bg-primary p-2 text-center d-flex flex-column justify-content-center">
                                     <div t-esc="record.date_begin.raw_value.getDate()" class="o_event_fontsize_20"/>
                                     <div>
                                         <t t-esc="luxon.DateTime.fromJSDate(record.date_begin.raw_value).toFormat('MMM yyyy')"/>
