--- a/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
+++ b/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
@@ -320,7 +320,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 s_col_no_bgcolor pt16 pb16" data-name="Box">
-                    <div class="card bg-primary">
+                    <div class="card text-bg-primary">
                         <h4 class="card-header">Responsibilities</h4>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Lead the entire sales cycle</li>
@@ -332,7 +332,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 s_col_no_bgcolor pt16 pb16" data-name="Box">
-                    <div class="card bg-primary">
+                    <div class="card text-bg-primary">
                         <h4 class="card-header">Must Have</h4>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Bachelor Degree or Higher</li>
@@ -344,7 +344,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 s_col_no_bgcolor pt16 pb16" data-name="Box">
-                    <div class="card bg-primary">
+                    <div class="card text-bg-primary">
                         <h4 class="card-header">Nice to have</h4>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Experience in writing online content</li>
@@ -397,22 +397,22 @@
             </p>
             <div class="row pt16">
                 <div class="col-lg-3 text-center pt16 pb32">
-                    <i class="fa fa-2x fa-gift rounded-circle bg-primary m-3"></i>
+                    <i class="fa fa-2x fa-gift rounded-circle text-bg-primary m-3"></i>
                     <h3>Perks</h3>
                     <p>A full-time position <br/>Attractive salary package.</p>
                 </div>
                 <div class="col-lg-3 text-center pt16 pb32">
-                    <i class="fa fa-2x fa-bar-chart rounded-circle bg-primary m-3"></i>
+                    <i class="fa fa-2x fa-bar-chart rounded-circle text-bg-primary m-3"></i>
                     <h3>Trainings</h3>
                     <p>12 days / year, including <br/>6 of your choice.</p>
                 </div>
                 <div class="col-lg-3 text-center pt16 pb32">
-                    <i class="fa fa-2x fa-futbol-o rounded-circle bg-primary m-3"></i>
+                    <i class="fa fa-2x fa-futbol-o rounded-circle text-bg-primary m-3"></i>
                     <h3>Sport Activity</h3>
                     <p>Play any sport with colleagues, <br/>the bill is covered.</p>
                 </div>
                 <div class="col-lg-3 text-center pt16 pb32">
-                    <i class="fa fa-2x fa-coffee rounded-circle bg-primary m-3"></i>
+                    <i class="fa fa-2x fa-coffee rounded-circle text-bg-primary m-3"></i>
                     <h3>Eat &amp; Drink</h3>
                     <p>Fruit, coffee and <br/>snacks provided.</p>
                 </div>
